added opperator functions

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <div class="header">This is a calculator</div>
     <div id = "calculator">
-        <div class="display">display</div>
+        <div class="display"></div>
         <div class="buttons">
         <div class="column">
             <button class="number button" id="7">7</button>
@@ -34,13 +34,13 @@
         <div class="column">
             <button class="opperator button" id="negative">+/-</button>
             <button class="opperator button" id="multiply">x</button>
-            <button class="opperator button" id="minus">-</button>
+            <button class="opperator button" id="subtract">-</button>
             <button data-opperator="plus" class="opperator button" id="plus">+</button>
         </div>
         <div class="column">
             <button class="opperator button" id="backspace">←</button>
             <button class="opperator button" id="divide">÷</button>
-            <button class="opperator button" id="equals">=</button>
+            <button class="button" id="equals">=</button>
         </div>
         </div>
     </div>
