stylized, added backspace, negative, decimal.

--- a/index.html
+++ b/index.html
@@ -29,16 +29,16 @@
             <button class="number button" id="9">9</button>
             <button class="number button" id="6">6</button>
             <button class="number button" id="3">3</button>
-            <button class="number button" id="decimal">.</button>
+            <button class="button" id="decimal">.</button>
         </div>
         <div class="column">
-            <button class="opperator button" id="negative">+/-</button>
+            <button class="button" id="negative">+/-</button>
             <button class="opperator button" id="multiply">x</button>
             <button class="opperator button" id="subtract">-</button>
             <button data-opperator="plus" class="opperator button" id="plus">+</button>
         </div>
         <div class="column">
-            <button class="opperator button" id="backspace">←</button>
+            <button class="button" id="backspace">←</button>
             <button class="opperator button" id="divide">÷</button>
             <button class="button" id="equals">=</button>
         </div>
